<resources>
    <string name="action_add_alarm">Add alarm</string>
    <string name="action_add_group_alarm">Group alarms</string>
    <string name="app_name">Alarm2</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Register</string>

    <!-- Strings related to login -->
    <string name="prompt_number">Phone Number</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Register Number</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Strings related to adding texts -->
    <string name="text_screen_name">Text Messages</string>
    <string name="text_header">Stored Messages</string>
    <string name="button_title">Add New Message</string>
    <string name="text_hint">Input Text</string>

    <!-- Strings related to adding audio messages -->
    <string name="audio_screen_name">Text Messages</string>
    <string name="audio_header">Stored Messages</string>
    <string name="audio_button_title">Add New Voice Message</string>
    <string name="audio_record_title">Record</string>
    <string name="stop_button">Stop</string>
    <string name="record_button">Record</string>
    <string name="play_button">Play</string>
    <string name="save_button">Save</string>
    <string name="record">Record</string>
    <!-- audio message uses same text_hint -->


    <!-- String for position for selection -->
    <string name="position">-1</string>


    <string name="title_activity_home_screen">HomeScreen</string>

    <string name="preference_file_key">prefs</string>

    <string name="select">select</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_test">test</string>
    <string name="title_activity_add_location_alarm">AddLocationAlarm</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- Strings related to Verify -->
    <string name="verify">Verify</string>
    <string name="numberEditTxt">Enter Phone Number</string>
    <string name="numberBtn">Submit</string>
    <string name="codeEditTxt">Enter Verification Code</string>
    <string name="codeBtn">Verify</string>

    <!--Strings related to group alarm -->
    <string name="group">Group Admin</string>
    <string name="phone_hint">Enter Number</string>
    <string name="enter_name">Enter name</string>
    <string name="user_button">Add User</string>
    <string name="user_count">Alarms Rung: %d/%d</string>
    <string name="menu_name">Username</string>
    <string name="menu_phone">Phone Number</string>
    <string name="menu_alarm">Not Acknowledged</string>
    <string name="list_header">Group Alarms</string>
    <string name="add_group_btn">Add Group Alarm</string>
    <string name="deleteGroup">Delete Alarm</string>

</resources>