<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <TextView
            android:id="@+id/audioMessageTitle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="20"
            android:text="@string/audio_header"
            android:textAlignment="center"
            android:textSize="30sp" />
        <Button
            android:id="@+id/addBtn"
            android:text="@string/audio_button_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="addItems"/>

        <ListView
            android:id="@+id/list"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:drawSelectorOnTop="false" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="8dp">

            <Button
                android:id="@+id/recording_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center|center_horizontal"
                android:text="@string/record_button"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="8dp">

            <Button
                android:id="@+id/stop_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center|center_horizontal"
                android:text="@string/stop_button"/>

        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>